--- a/webapp/index.html
+++ b/webapp/index.html
@@ -8,11 +8,11 @@
 		<title>activityConfirmation</title>
 
 		<script id="sap-ui-bootstrap"
-			src="https://sapui5.hana.ondemand.com/1.71.16/resources/sap-ui-core.js"
+			src="../../resources/sap-ui-core.js"
 			data-sap-ui-libs="sap.m"
 			data-sap-ui-theme="sap_belize"
 			data-sap-ui-compatVersion="edge"
-			data-sap-ui-resourceroots='{"com.sap.PostActivityactivityConfirmation": ""}'>
+			data-sap-ui-resourceroots='{"com.sap.activityConfirmation": ""}'>
 		</script>
 
 		<link rel="stylesheet" type="text/css" href="css/style.css">
@@ -22,7 +22,7 @@
 				new sap.m.Shell({
 					app: new sap.ui.core.ComponentContainer({
 						height : "100%",
-						name : "com.sap.PostActivityactivityConfirmation"
+						name : "com.sap.activityConfirmation"
 					})
 				}).placeAt("content");
 			});
